--- a/conteudo.html
+++ b/conteudo.html
@@ -141,7 +141,7 @@
             </div>
 
             <div class="quadrado">
-              <a href="Programas/RDE18_JS_Ex08.html">RDE16</a>
+              <a href="RDE18_JS_Ex08.html">RDE16</a>
               <p>
               JavaScript
               </p>
